Correção das cintaxes e criação de NIO e IO